--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "todolist-v1",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,5 +13,14 @@
     "express": "^4.16.3",
     "lodash": "^4.17.21",
     "mongoose": "^6.10.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FlavioAlfonzetti/todolist-v2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FlavioAlfonzetti/todolist-v2/issues"
+  },
+  "homepage": "https://github.com/FlavioAlfonzetti/todolist-v2#readme",
+  "description": ""
 }
